--- a/src/style.css
+++ b/src/style.css
@@ -18,49 +18,17 @@ body {
   font-size: 14px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+/* element-plus */
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.main-scroll.el-dialog.is-fullscreen {
+  overflow: hidden;
 }
-a:hover {
-  color: #535bf2;
+/* .el-overlay-dialog */
+.main-scroll.el-dialog.is-fullscreen {
+  display: flex;
+  flex-direction: column;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.main-scroll .el-dialog__body {
+  overflow-y: auto;
+  flex-shrink: 2;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-#app {
-  
-}
-
